# WireMag

./: .gitignore  CMakeLists.txt  README.md  biotSavartLaw.cc  biotSavartLaw.cc~  biotSavartLaw.h  biotSavartLaw.h~  config.txt  example-misc.cc  field.cc  field.h  genGrid.cc  genGrid.h  main.cc  main.h  makefile  mesh.cc  mesh.h  plotGrid.plt  plotTest.ipynb  test.cc  testList.cc  testVector.cc  testlist.cc  vectorAddOns.cc  vectorAddOns.h  vectorOperation.cc  vectorOperation.h  wire.cc  wire.h
future/: gnuplotTest.cc
include/: biotSavartLaw.h  mesh.h  vectorOperation.h  wire.h
src/: biotSavartLaw.cc  main.cc  vectorOperation.cc  wire.cc
